# Stern-Marzahn-Website

./: .gitignore  .prettierignore  README.md  docker-compose.yml
.github/workflows/: release_new_dev.yml
stern-marzahn-backend/: Dockerfile  pyproject.toml
stern-marzahn-backend/stern_marzahn_backend/: main.py
stern-marzahn-website/: Dockerfile  README.md  angular.json  package-lock.json  package.json
stern-marzahn-website/src/: index.html
stern-marzahn-website/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
stern-marzahn-website/src/app/archive-site/: archive-site.component.html  archive-site.component.spec.ts  archive-site.component.ts
stern-marzahn-website/src/app/contact/: contact.component.ts
stern-marzahn-website/src/app/footer/: footer.component.html  footer.component.sass  footer.component.ts
stern-marzahn-website/src/app/further-links-and-rules/: further-links-and-rules.component.html  further-links-and-rules.component.spec.ts  further-links-and-rules.component.ts
stern-marzahn-website/src/app/general-info/: general-info.component.ts
stern-marzahn-website/src/app/header/: header.component.html  header.component.sass  header.component.ts
stern-marzahn-website/src/app/imprint/: imprint.component.html  imprint.component.ts
stern-marzahn-website/src/app/nav-bar/: nav-bar.component.html  nav-bar.component.sass  nav-bar.component.ts
stern-marzahn-website/src/app/privacy-policy/: privacy-policy.component.html  privacy-policy.component.ts
stern-marzahn-website/src/app/side-bar/: side-bar.component.html  (+1 more)
(+7 files in other folders)
