[tool.poetry]
name = "stern-marzahn-backend"
version = "0.1.0"
description = ""
authors = ["Kory291 <01lukasschaefer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
